2006-01-12 Tim
 PATCH: [ 1403412 ] German: Option 'Line Difference Coloring' looks broken
  Src/Languages/German: MergeGerman.rc

2006-01-11 WinMerge beta release 2.5.2

2006-01-11 Kimmo
 PATCH: [ 1402774 ] Use dark red color for 'binarydiff.ico'
  Submitted by Tim
  Src/res: binarydiff.ico
 PATCH: [ 1400845 ] Allow Shift+Ctrl+F3 to search selected text backwards
  With addition from Takashi for Shift+F3 backwards search
  Src: Merge.rc
  Src/editlib: ccrystaltextview.cpp
  Src/Language: */Merge*.rc
 BUG: [ 1400829 ] Crash trying to open location pane context menu
  Src: LocationView.cpp

2006-01-11 Tim
 PATCH: [ 1401420 ] New 'MergeDir' icon
  Src/res: MergeDir.ico

2006-01-10 Perry
 PATCH: [ 1400830 ] Fix drop to only do LoadProjectFile when 1 file dropped
 BUG: [ 1400797 ] Dropping two project files doesn't work to compare them
  (Also fixes extension test to be case-sensitive)
  Src: MainFrm.cpp

2006-01-09 Perry
 BUG: [ 1396222 ] CDirView::MoveSelection() is confused
 (Rename MoveSelection to MoveFocus & add more commenting)
  Src: DirActions.cpp DirView.cpp DirView.h

2006-01-07 Perry
 PATCH: [ 1398064 ] Catalan translation update
 By Jordi Vilar
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1398959 ] Implement GuessEncoding in QuickCompare
  Src: codepage_detect.cpp DiffWrapper.cpp DiffWrapper.h

2006-01-05 WinMerge experimental release 2.5.0.5 (cvs)

2006-01-04 Kimmo
 PATCH: [ 1393635 ] Save pane sizes and positions when they change
  Src: ChildFrm.cpp ChildFrm.h DiffViewBar.cpp DiffViewBar.h LocationBar.cpp
   LocationBar.h LocationView.cpp LocationView.h MergeDiffDetailView.cpp
   MergeDiffDetailView.h StdAfx.h
 PATCH: [ 1396413 ] Update Open dialog controls when its activated
  Src: OpenDlg.cpp OpenDlg.h

2006-01-04 Perry
 Cosmetic; normalizing blank lines to agree with English Merge.rc
  Src\Languages:
   Brazilian\MergeBrazilian.rc
   ChineseSimplified\MergeChineseSimplified.rc
   Korean\MergeKorean.rc
   Norwegian\MergeNorwegian.rc
