@@ -12,12 +12,11 @@
 
 
 #include "sizecbar.h"
-#include "scbarg.h"
+#include "scbarcf.h"
 
 
 // You must #define this for viewbar to compile properly
-#define TViewBarBase CSizingControlBarG
-//#define TViewBarBase CSizingControlBar
+#define TViewBarBase CSizingControlBarCF
 
 /**
  * @brief Class for location bar.
