@@ -2163,6 +2163,13 @@ BEGIN
     ID_EDITOR_COPY_FILENAME "Copy Filename"
 END
 
+// FILE COMPARE: PANE CAPTIONS
+STRINGTABLE 
+BEGIN
+    IDS_LOCBAR_CAPTION      "Location Pane"
+    IDS_DIFFBAR_CAPTION     "Diff Pane"
+END
+
 // CREATE PATCH
 STRINGTABLE
 BEGIN
